<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="10dip"
        android:gravity="top|center">

        <ImageView android:src="@drawable/logo"
            android:layout_width="256dp"
            android:layout_height="125dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!-- Login Button -->

        <Button
            android:id="@+id/btnTMesin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_link_to_tmesin"
            android:textColor="@color/btn_text"
            android:visibility="gone" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnTMultimedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_link_to_tmultimedia"
            android:textColor="@color/btn_text"
            android:visibility="gone" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btnTOtomotif"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_link_to_totomotif"
            android:textColor="@color/btn_text"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
